RESOLVED FIXED234191
Non-unified build fixes, mid mid December 2021 edition
https://bugs.webkit.org/show_bug.cgi?id=234191
Summary Non-unified build fixes, mid mid December 2021 edition
Lauro Moura
Reported 2021-12-10 20:38:53 PST
Non-unified build fixes, mid mid December 2021 edition
Attachments
Patch (11.10 KB, patch)
2021-12-10 20:39 PST, Lauro Moura
no flags
Updated patch with bug number (11.14 KB, patch)
2021-12-10 20:43 PST, Lauro Moura
no flags
Lauro Moura
Comment 1 2021-12-10 20:39:16 PST
EWS Watchlist
Comment 2 2021-12-10 20:40:36 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See https://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Lauro Moura
Comment 3 2021-12-10 20:41:34 PST
Waiting for the green bubbles to r+ it.
Lauro Moura
Comment 4 2021-12-10 20:43:57 PST
Created attachment 446859 [details] Updated patch with bug number
EWS
Comment 5 2021-12-11 10:18:44 PST
Committed r286914 (245140@main): <https://commits.webkit.org/245140@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 446859 [details].
Radar WebKit Bug Importer
Comment 6 2021-12-11 10:19:15 PST
Note You need to log in before you can comment on or make changes to this bug.