Source/WebCore/workers/shared/SharedWorkerManager.cpp
@@ -31,9 +31,13 @@
 #include "LoaderStrategy.h"
 #include "MessageEvent.h"
 #include "PlatformStrategies.h"
+#include "SharedWorker.h"
+#include "SharedWorkerGlobalScope.h"
 #include "SharedWorkerProxy.h"
 #include "SharedWorkerScriptLoader.h"
 #include "SharedWorkerThread.h"
+#include "WorkerRunLoop.h"
+#include "WorkerScriptLoader.h"
 #include <wtf/NeverDestroyed.h>
 #include <wtf/RunLoop.h>
 
